# client_server_model

./: CMakeLists.txt
client/: CMakeLists.txt
client/src/: Application.cpp  Application.h  Event.cpp  Event.h  Input.cpp  Input.h  KeyboardButtons.h  MouseButtons.h  ParticleSystem.cpp  ParticleSystem.h  Renderer.cpp  Renderer.h  WindowEventHandler.cpp  WindowEventHandler.h  main.cpp
core/: TypePrimitives.h  Vertex.h
core/managers/: EntityManager.cpp  EntityManager.h
core/math/: math.h
core/objects/: Entity.cpp  Entity.h
core/objects/components/: Component.cpp  Component.h  DirectionComponent.cpp  DirectionComponent.h  ShapeComponent.cpp  ShapeComponent.h  components.h
renderer/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  View.cpp  View.h
scripts/: UserControlComponent.cpp  UserControlComponent.h
server/: CMakeLists.txt
server/src/: Server.cpp  Server.h  main.cpp
src/: CMakeLists.txt
src/test/: Test.cpp  Test.h
